--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,10 @@
 Co udělat:
 
-Dát body padding-top aby nebyla stránka za headerem
+Dát body padding-top aby nebyla stránka za headerem - pro .background-foto
+responsivně - zarovnání loga úplně ke kraji + hamburger menu + odstranění nápisu
+
+
+
 
 Zmenit title icon
+ 
