main section, home site completed?

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,9 @@
 Co udělat:
 
-Dát body padding-top aby nebyla stránka za headerem - pro .background-foto
+Vzhled stránek je zamýšlen na mobilní telefon pro rozměr od cca 360px do 960px. Content-wrapper má omezení na max-width: 960px; margin: 0 auto;
+===>
+Přidat pod background foto grid (přes flexbox, 6 boxů - 3 vedle sebe, 2 vedle sebe nebo vše pod sebou?)
 
+Přidat šipku za odkazy 
 
-
-
-Zmenit title icon
- 
+Footer 
